# emscripten-conan-repo-template

./: .clang-format  .config  .gitignore  .parent-template.config  .repo-template.config  CMakeLists-old.txt  CMakeLists.txt  CMakeUserPresets.json  conanfile.py  nginx.conf  repo.config
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: Dockerfile.dev  docker-compose.ci.yml  docker-compose.dev.yml
.github/workflows/: build-and-push-docker-image.yml  build.wfc.yml  push.yml
profiles/: build.profile  host.profile  linux.profile  wasm.profile  windows.profile
public/: emscripten-conan-repo-template.js  index.html
scripts/: build-and-run.linux.sh  build-linux.sh  build-n-run-linux.sh  build-wasm.sh  build-windows.sh  build.linux.sh  build.wasm.sh  build.windows.sh  clean.sh  common.sh  dev-wasm.sh  dev.wasm.sh  install.linux.sh  install.wasm.sh  install.windows.sh  package.test.sh  post-create-command.sh  run-linux.sh  run.linux.sh  run.wasm.sh  start.nginx.sh  stop-nginx.sh  utils.sh
src/: main.cc  main.hh
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cc
